# rust-directory-scan-prompt-generation

./: Cargo.toml  README.md
src/: main.rs
