[package]
name = "rust-directory-scan-prompt-generation"
version = "0.1.0"
authors = ["Sanskars <sanskars@icloud.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }